# raspi-nyc-train-display

./: .gitignore  pyproject.toml  raspi-setup.md  readme.md  setup.py  supervisord-rpi.conf  supervisord.conf  tox.ini
.github/workflows/: push.yml
test/: __init__.py  test_display.py  test_mta.py
traindisplay/: __init__.py  db.py
traindisplay/display/: __init__.py  cli.py  metadata.py
traindisplay/mta/: __init__.py  cli.py
