[tool.poetry]
name = "raspi-nyc-train-display"
version = "0.1.2"
description = ""
authors = ["Nolan Conaway <nolanbconaway@gmail.com>"]
packages = [{ include = "traindisplay" }]

[tool.poetry.dependencies]
python = "^3.6"
underground = {git = "https://github.com/nolanbconaway/underground.git"}
click = "^7.0"
sqlitedict = "^1.6"
pygame = "^1.9"
supervisor = "^4.0"

[tool.poetry.dev-dependencies]
pydocstyle = "^4.0"
pylint = "^2.3"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pytest = "^5.1"
tox = "^3.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
